assets/css/style.scss
---
---

@import "{{ site.theme }}";
@import url('https://fonts.googleapis.com/css?family=Cardo:400i&display=swap');

/* # Style overrides */
.inner {
	width: 100%;
	margin: 0 auto;
	max-width: 780px;
	padding: 20px
}
blockquote {
	padding: 20px;
	border: 0px;
	text-align: center;
	font-style: italic;
	font-family: 'Cardo', serif;
	font-size: 1.1em
}
ul {
	padding-inline-start: 40px;
}
a {
	text-decoration: none;
	color: #D08300;
}
a:hover{
	color: #9CAD9C;
}
ul.none{list-style-type:none}

/* # MJC additions */
.header_logo {
	font-size: 2.5em;
	padding-right: 50px;
	color: #F59D00;
	text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
}
nav {
	clear:both;
	padding: 0px 10px 0px 10px;
	margin: 20px;
	word-spacing: 10px;
	text-align: center;
	font-size: 1em;
}
#ohloh{
	clear: right;
	float: right;
	width: 280px;
	font-family: arial, helvetica, sans-serif;
	font-size: 0.8em;
	text-align: center;
	margin: 0px;
}
#linkedin{
	clear: right;
	float: right;
	margin: 0px 20px 20px 20px;
}
#core_logo{
	clear: right;
	float: right;
	margin: 0px 10px 20px 10px;
}
section.sub_sec{
	margin: 10px 10px 20px 10px;
	padding: 10px;
	background-color: #EFEDE9;
	border: 1px solid #FFFFFF;
}
.end_quote{
	text-align: right;
	margin-right: 20px;
	font-style: normal;
	font-family: 'Helvetica Neue', Helvetica, Arial, serif;
}
ul.contactform {
	padding: 0;
	margin: 0;
}
ul.contactform  li{
	list-style-type:none;
}
ul.contactform  input{
	margin-bottom: 10px;
}
ul.contactform  textarea {
	width: 90%;
	margin-bottom: 10px;
}

